# rag_from_scratch

./: pyproject.toml
chromadb/: app.py
groq/: app.py
multimodal_rag/: langchain_multimodal.ipynb
rag/: app.py
simple_rag/: simple_rag.ipynb
vanilla_rag/chromadb/: app.py
vanilla_rag/rag/: app.py
